--- a/CSYT/CSYT.csproj
+++ b/CSYT/CSYT.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Version.cs" />
     <Page Include="ChangeUrl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
