Changed to v2.0. Fixed rspect ratio. Removed borders. Added option to click on related videos. Overhauled Dragmove.

--- a/CSYT/CSYT.csproj
+++ b/CSYT/CSYT.csproj
@@ -82,6 +82,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="LifeSpanHandler.cs" />
     <Compile Include="RequestHandler.cs" />
     <Compile Include="Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
