--- a/CSYT/packages.config
+++ b/CSYT/packages.config
@@ -4,4 +4,5 @@
   <package id="cef.redist.x86" version="3.3239.1723" targetFramework="net462" />
   <package id="CefSharp.Common" version="63.0.0" targetFramework="net462" />
   <package id="CefSharp.Wpf" version="63.0.0" targetFramework="net462" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net462" />
 </packages>
