Added opacity control

--- a/CSYT/App.config
+++ b/CSYT/App.config
@@ -19,6 +19,9 @@
             <setting name="C_VideoControls" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="C_Opacity" serializeAs="String">
+                <value>1</value>
+            </setting>
         </CSYT.Properties.Settings>
     </userSettings>
 </configuration>
