--- a/CSYT/Properties/Settings.settings
+++ b/CSYT/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="C_VideoControls" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="C_Opacity" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
