Renamed video.ico to icon.ico

--- a/CSYT/CSYT.csproj
+++ b/CSYT/CSYT.csproj
@@ -78,7 +78,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>video.ico</ApplicationIcon>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
@@ -171,7 +171,7 @@
     <Resource Include="shortcuts.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="video.ico" />
+    <Resource Include="icon.ico" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Filter.xslt" />
