Renamed some members. Changed some access modifiers. Made some cleanup.

--- a/CSYT/App.config
+++ b/CSYT/App.config
@@ -10,16 +10,16 @@
     </startup>
     <userSettings>
         <CSYT.Properties.Settings>
-            <setting name="C_Autoplay" serializeAs="String">
+            <setting name="Autoplay" serializeAs="String">
                 <value>1</value>
             </setting>
-            <setting name="C_VideoInfo" serializeAs="String">
+            <setting name="VideoInfo" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="C_VideoControls" serializeAs="String">
+            <setting name="VideoControls" serializeAs="String">
                 <value>1</value>
             </setting>
-            <setting name="C_Opacity" serializeAs="String">
+            <setting name="Opacity" serializeAs="String">
                 <value>1</value>
             </setting>
         </CSYT.Properties.Settings>
