--- a/CSYT/Properties/Settings.settings
+++ b/CSYT/Properties/Settings.settings
@@ -2,16 +2,16 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CSYT.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="C_Autoplay" Type="System.Int32" Scope="User">
+    <Setting Name="Autoplay" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
-    <Setting Name="C_VideoInfo" Type="System.Int32" Scope="User">
+    <Setting Name="VideoInfo" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="C_VideoControls" Type="System.Int32" Scope="User">
+    <Setting Name="VideoControls" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
-    <Setting Name="C_Opacity" Type="System.Double" Scope="User">
+    <Setting Name="Opacity" Type="System.Double" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
   </Settings>
