Added Translation support

--- a/CSYT/App.config
+++ b/CSYT/App.config
@@ -22,6 +22,9 @@
             <setting name="Opacity" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="Language" serializeAs="String">
+                <value>English</value>
+            </setting>
         </CSYT.Properties.Settings>
     </userSettings>
 </configuration>
