--- a/CSYT/packages.config
+++ b/CSYT/packages.config
@@ -5,4 +5,5 @@
   <package id="CefSharp.Common" version="63.0.0" targetFramework="net462" />
   <package id="CefSharp.Wpf" version="63.0.0" targetFramework="net462" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net462" />
 </packages>
